[package]
name = "mydns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.22"
